[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>", "Messense Lv <messense@icloud.com>"]
description = "Return interface IP addresses on Posix and windows systems"
license = "MIT OR BSD-3-Clause"
name = "if-addrs"
readme = "README.md"
repository = "https://github.com/messense/if-addrs"
version = "0.14.1"
edition = "2021"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = ">=0.59.0, <=0.61"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
]

[features]
link-local = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-ios", "aarch64-apple-watchos", "aarch64-apple-tvos", "aarch64-apple-visionos"]
cargo-args = ["-Z", "build-std"]
